# my-simple-trader

./: .env  .env.example  .env.production.example  .env.template  .gitignore  API_DOCUMENTATION.md  APK_BUILD_GUIDE.md  APK_READY.md  CHANGELOG.md  COPILOT_NEXT_STEPS.md  DEPLOYMENT.md  DOWNLOAD_APK.md  Dockerfile  GITHUB_ACTIONS_SETUP.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_READY.md  QUICKSTART.md  README.md  README_SETUP.md  SELF_HOSTING.md  SETUP.md  SWARM_BOT_INTEGRATION.md  TASK_COMPLETION_SUMMARY.md  TESTING_REAL_TRADES.md  build-apk.sh  build-note.txt  buildozer.spec  capacitor.config.json  docker-compose.selfhost.yml  docker-compose.yml  index.html  main.py  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  schema.sql  (+4 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/agents/: my-agent.agent.md
.github/instructions/: *.instructions.md
.github/pull_requests/: 20.json
.github/workflows/: android-apk.yml  auto-merge.yml  auto-pr.yml  build-all-platforms.yml  build-apk.yml  pull-request.yml  release.yml  web-build.yml
android/app/: build.gradle
deploy/selfhost/: docker-compose.yml
deployment/: ai-trader.service  nginx.conf
docs/: FUNDING_WITHDRAWAL_ARCHITECTURE.md  status.md
scripts/: build.sh  smoke-test.sh  verify-setup.sh
src/: App.tsx  index.css
src/ai_modules/: arbitrage.py  ensemble_ai.py  hft.py  news_sentiment.py  profit_maximizer.py
src/components/: BotOnOffSwitch.tsx  CryptoMarketGrid.tsx  (+9 more)
supabase/: config.toml  setup.sql
(+62 files in other folders)
