[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "masterpiece-swarm-trader"
version = "1.5.0"
description = "Masterpiece Swarm Trading Bot — 4-agent AI council with Supabase ledger"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "python-multipart",
  "pykrakenapi",
  "krakenex",
  "requests",
  "openai>=1.0.0",
  "python-dotenv",
  "supabase",
  "numpy",
  "pandas",
  "scikit-learn",
  "aiohttp",
  "python-dateutil",
  "pytz",
  "xmltodict",
]

[project.optional-dependencies]
ai = [
  "xgboost",
  "transformers",
  "torch",
  "torchvision",
  "torchaudio",
  "tensorflow",
]
dev = [
  "pytest",
  "pytest-asyncio",
  "httpx",
]

[project.scripts]
swarm-trader = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
